# python-fuer-fortgeschrittene-april-2024

00_warmup/: check_storage.py  storage.py  storage_moegliche_loesung.py
02_typing/: 00_intro.py  01_builtins.py  02_classes.py  03_specials.py  04_generics.py
02_typing/excercises/: 01_builtins.py  01_builtins_moegliche_loesung.py  02_classes.py  02_classes_moegliche_loesung.py  03_specials.py  03_specials_moegliche_loesung.py  04_generics.py  04_generics_moegliche_loesung.py
04_management/: .pre-commit-config.yaml
05_project_management/my-cloud/: .gitignore  .pre-commit-config.yaml  pyproject.toml
05_project_management/my-cloud/my_cloud/: exceptions.py  identity.py  storage.py
05_project_management/my-cloud/tests/: test_database.py  test_identity.py
05_testing/my_cloud/: database.py  exceptions.py  identity.py  storage.py
05_testing/tests/: test_database.py  test_identity.py  test_storage.py
06_tooling_automation/: .pre-commit-config.yaml
07_testing/my_cloud/: database.py
07_testing/tests/: test_database.py  test_storage.py
